# openhunt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: analytics.md  architecture.md  hh-reference.md  ideas.md  memory.md  tech.md
src/openhunt/: __init__.py  __main__.py  answers.py  auth.py  cli.py  config.py  llm.py  memory.py  update.py
src/openhunt/browser/: auth.py  selectors.py  session.py
src/openhunt/browser/actions/: apply.py  profile.py  questionnaire.py  resume.py
tests/: test_answers.py  test_apply_url.py  test_auth.py  test_cli.py  test_config.py  test_llm.py  test_memory.py  test_questionnaire.py  test_update.py
