[project]
name = "openhunt-cli"
version = "0.2.0"
description = "CLI tool for automating job seeker actions on hh.ru"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mikhail", email = "tarminik@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0",
    "playwright>=1.50",
    "click>=8.0",
    "tomli-w>=1.0",
    "openai>=1.0",
]

[project.scripts]
openhunt = "openhunt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "openhunt"
